View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031274 | Open CASCADE | OCCT:Data Exchange | public | 2019-12-25 19:16 | 2020-12-02 17:12 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.4.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031274: Data Exchange - RWObj_Reader ignores usemtl with empty name | ||||
Description | usemtl without material name in OBJ files means "default" material. However, RWObj_Reader incorrectly processes this item due to out-of-range access. | ||||
Tags | No tags attached. | ||||
Test case number | de_mesh/obj_read/usemtl | ||||
|
Branch CR31274 has been created by kgv. SHA-1: b31d5f6474d03c5f2edb582eba5fabe16dd6134c Detailed log of new commits: Author: kgv Date: Wed Dec 25 19:36:48 2019 +0300 0031274: Data Exchange - RWObj_Reader ignores usemtl with empty name Fixed out of range access within pushMaterial(). |
|
Please raise the patch. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31274-master-KGV/ |
|
Branch CR31274 has been deleted by inv. SHA-1: b31d5f6474d03c5f2edb582eba5fabe16dd6134c |
occt: master d415125a 2019-12-25 16:36:48 Committer: bugmaster Details Diff |
0031274: Data Exchange - RWObj_Reader ignores usemtl with empty name Fixed out of range access within pushMaterial(). |
Affected Issues 0031274 |
|
mod - src/RWObj/RWObj_Reader.cxx | Diff File | ||
add - tests/de_mesh/obj_read/usemtl | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-12-25 19:16 | kgv | New Issue | |
2019-12-25 19:16 | kgv | Assigned To | => kgv |
2019-12-25 19:39 | git | Note Added: 0089766 | |
2019-12-25 19:47 | kgv | Product Version | 7.5.0 => 7.4.0 |
2019-12-25 21:48 | kgv | Note Added: 0089769 | |
2019-12-25 21:48 | kgv | Assigned To | kgv => bugmaster |
2019-12-25 21:48 | kgv | Status | new => resolved |
2019-12-25 21:48 | kgv | Status | resolved => reviewed |
2019-12-26 17:20 | bugmaster | Test case number | => de_mesh/obj_read/usemtl |
2019-12-28 13:37 | bugmaster | Changeset attached | => occt master d415125a |
2019-12-28 13:37 | bugmaster | Status | reviewed => verified |
2019-12-28 13:37 | bugmaster | Resolution | open => fixed |
2019-12-28 15:23 | git | Note Added: 0089798 | |
2020-12-02 16:41 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |