0031274: Data Exchange - RWObj_Reader ignores usemtl with empty name

Fixed out of range access within pushMaterial().